Moving to desktop

--- a/acceleration_techniques.tex
+++ b/acceleration_techniques.tex
@@ -374,7 +374,8 @@ thus
   \hat{J}^{-1}_\pazocal{R}(\bm\uptheta^k) \Delta \mathbf r^k = \mathbf W_k \mathbf c.
 \end{equation}
 
-A reasonable choice for \(\mathbf c\) will be one that leads to a good approximation of \(\Delta \mathbf r^k\) by the available \(\Delta \mathbf r^i\), e.g., the minimization of 
+An appropriate choice for \(\mathbf c\) will be one that leads to a good approximation of \(J^{-1}_\pazocal{R}(\bm \uptheta^k)\).
+Given that each approximation to the inverse of the Jacobian is related to a \(\Delta \mathbf r\)), and assuming that it is a good aroximation whatever the \(\Delta \mathbf r\) \(\Delta \mathbf r^k\) by the available \(\Delta \mathbf r^i\), e.g., the minimization of 
 
 
 A linear combination of residual deltas from \(V_{k}\) is used to approximate
